fixing sitetitle and site tagline spacing
Former-commit-id: 0e90ff62ca3c50b22515527d99cf0060b38f269b [formerly 797da7f1f533e446bfcef546872d2e2cddc9846d] [formerly d69f146d75cf7dfbe4a6595ba4de466db96377d5 [formerly 244bfd541e4589c925c008f0f8e3083cae33fbbd]]
Former-commit-id: 778cc9e97d37615ce49f853e4c0ba0bdf393cb67 [formerly 34c0c6e5076963793122f8e9e3cd5e8aba91519b]
Former-commit-id: 322db9ea026ca581ad67b4b788ca79db8db08cb3

--- a/public/css/sass/partials/_media-queries.sass
+++ b/public/css/sass/partials/_media-queries.sass
@@ -7,7 +7,7 @@
 		// padding-top: 4vw
 
 	header#siteheader p#sitebyline
-		margin: -1vw auto auto auto
+		margin: -0.5em auto auto auto
 		padding-bottom: 5vw
 
 	main
